add header and footers

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,5 +12,6 @@ Version: 1.0.0
 @import 'bourbon/bourbon';
 @import 'neat/neat';
 @import 'base/base';
-
+@import 'partials/header';
+@import 'partials/footer';
 @import 'partials/layout';
