--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: NAPSA - VW
+Theme Name: napsa_vw
 Theme URI: httpp://halsey-design.com
 Description: Child theme for twentyfifteen
 Author: Halsey Design, LLC.
@@ -248,6 +248,70 @@ hr {
   margin: 1.5em 0;
 }
 
+#site-navigation {
+  display: block;
+  background: #000;
+  height: 50px;
+}
+
+#site-navigation #top-menu,
+#site-navigation > input {
+  display: none;
+}
+
+#site-navigation > label {
+  display: block;
+  font-size: 36px;
+  color: #fff;
+  position: absolute;
+  right: 20px;
+  width: 36px;
+  padding: 0;
+  cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+#site-navigation > input:checked + #top-menu {
+  display: block;
+  clear: both;
+  top: 36px;
+  position: relative;
+  background: #000;
+  color: #fff;
+}
+
+#site-navigation ul li {
+  display: block;
+  padding: 12px 10px;
+}
+
+#site-navigation a {
+  text-decoration: none;
+  color: #fff;
+}
+
+@media only screen and (min-device-width: 768px) {
+  #site-navigation {
+    height: auto;
+  }
+
+  #site-navigation #top-menu {
+    display: block;
+  }
+
+  #site-navigation > label {
+    display: none;
+  }
+
+  #site-navigation ul li {
+    display: inline-block;
+  }
+}
 .row::after {
   clear: both;
   content: "";
@@ -263,4 +327,8 @@ hr {
   width: calc(25% - 25px);
   float: left;
   margin-left: 20px;
+}
+
+body {
+  background-color: #ffba00;
 }
