--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,9 @@
 /*
 Theme Name: NAPSA - VW
 Theme URI: httpp://halsey-design.com
-Description: Child theme for twentyfifteen
+Description: Theme for NAPSA Virtual Workshop 2017
 Author: Halsey Design, LLC.
 Author URI: http://www.halsey-design.com
-Template: twentyfifteen
 Version: 1.0.0
 */
 
@@ -12,6 +11,8 @@ Version: 1.0.0
 @import 'bourbon/bourbon';
 @import 'neat/neat';
 @import 'base/base';
+@import 'partials/variables';
 @import 'partials/header';
 @import 'partials/footer';
 @import 'partials/layout';
+@import 'partials/common';
