--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -2,6 +2,8 @@
 $white: #ffffff;
 $dk_green: #818c3c;
 $orange: #e76735;
+$link_blue: #0404ee;
+$grey:#999999;
 
 //Fonts
 $headerFont: "myriad-pro",sans-serif;
