--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,3 +16,5 @@ Version: 1.0.0
 @import 'partials/footer';
 @import 'partials/layout';
 @import 'partials/common';
+@import 'partials/sidebar';
+@import 'partials/single';
