--- a/scss/partials/_common.scss
+++ b/scss/partials/_common.scss
@@ -12,6 +12,34 @@ h2{
 }
 a{
 	text-decoration: none;
+	outline: 0;
+}
+a:active,
+a:focus, {
+  outline:0;
+  border:none;
+  -moz-outline-style: none;
+}
+a.post_block{
+	display: block;
+	margin-bottom: 2.0em;
+	@include clearfix;
+}
+h2.theme_list{
+	margin: 0 0 0.25em 0;
+}
+.page-content{
+	margin-bottom: 2.0em;
+}
+ul.theme_links{
+	list-style-type: disc;
+	list-style-position: inside;
+	a{
+		color:$link_blue;
+		&:hover{
+			color:$dk_green;
+		}
+	}
 }
 .videofeed{
 	@include clearfix;
@@ -23,14 +51,31 @@ a{
 	.img_hold{
 		@include grid-column(3);
 		margin-left: 0;
-		margin-right:20px;
 		img{
 			display:block;
 			width:100%;
 			height:auto;
 		}
 	}
-	.div_info{
+	.vid_info{
 		@include grid-column(9);
+		h2{
+			font-size: 20px;
+			color:$link_blue;
+		}
+		a{
+			color:#000;
+		}
+		p{
+			color:#000;
+		}
 	}
+}
+.video_info_bar{
+	width:100%;
+	background-color:$dk_green;
+	text-align: center;
+	padding:1.0em 0;
+	color:$white;
+	font-size: 1.1em;
 }
