--- a/scss/partials/_common.scss
+++ b/scss/partials/_common.scss
@@ -47,14 +47,31 @@ ul.theme_links{
 		width:100%;
 		height:100%;
 		display: block;
+		&:hover{
+			.img_hold .play_arrow{
+				opacity: 1;
+			}
+		}
 	}
 	.img_hold{
 		@include grid-column(3);
 		margin-left: 0;
-		img{
+		position: relative;
+		img.placeholder{
 			display:block;
 			width:100%;
 			height:auto;
+			position: relative;
+		}
+		.play_arrow{
+			position:absolute;
+			width:30%;
+			height:auto;
+			z-index: 99;
+			opacity: 0.7;
+			top: 50%;
+			left: 50%;
+		    transform: translate(-50%, -50%);
 		}
 	}
 	.vid_info{
