--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -20,6 +20,12 @@ footer{
 		 	p{
 		 		margin: 0 0 .35em 0;
 		 	}
+		 	a{
+		 		color:#fff;
+		 		&:hover{
+		 			color:$orange;
+		 		}
+		 	}
 		 }
 		 .footer_about{
 		 	@include grid-column(6);
