--- a/scss/partials/_single.scss
+++ b/scss/partials/_single.scss
@@ -11,7 +11,7 @@ body.single{
 	a.return_home{
 		font-size: 18px;
 		color:$grey;
-		margin: 1.0em 0 0;
+		margin: 1.0em 0 0.75em;
 		display: block;
 		&:hover{
 			color:$orange;
