--- a/scss/partials/_common.scss
+++ b/scss/partials/_common.scss
@@ -3,6 +3,8 @@ h1{
 	font-size: 2.2em;
 	font-weight: 600;
 	color: $orange;
+	margin: 0 0 0.38em 0;
+	line-height:1.0;
 }
 h2{
 	font-family:$headerFont;
@@ -53,6 +55,11 @@ ul.theme_links{
 			}
 		}
 	}
+	@media only screen and (max-width: 700px) {
+		h2{
+			text-align: center;
+		}
+	}
 	.img_hold{
 		@include grid-column(3);
 		margin-left: 0;
@@ -73,6 +80,10 @@ ul.theme_links{
 			left: 50%;
 		    transform: translate(-50%, -50%);
 		}
+		@media only screen and (max-width: 700px) {
+			@include grid-column(12);
+			margin-bottom: 0.75em;
+		}
 	}
 	.vid_info{
 		@include grid-column(9);
@@ -85,6 +96,12 @@ ul.theme_links{
 		}
 		p{
 			color:#000;
+		}
+		@media only screen and (max-width: 700px) {
+			@include grid-column(12);
+			h2{
+				text-align: center;
+			}
 		}
 	}
 }
